feat(backend): change implementation of getting user teams #7
